# paperpal

./: .gitignore  README.md  paperpal.py  pyproject.toml
paperpal/: arxiv.py  bibtex.py  constants.py  huggingface.py  mcp_server.py  s2.py  utils.py
