[project]
name = "paperpal"
version = "0.1.0"
description = "Paperpal is a tool that helps you write literature reviews for machine learning papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.1.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
]
